# investigaton-NLP

./: .gitignore  Create_QA_with_messages.py  PlotResults.ipynb  Readme.md  benchmark_explanation.md  clusterPlots.ipynb  fixMessageTime.ipynb  getEmbeddings.py  llm_utils.py  longmemeval.ipynb  longmemeval_m_cleaned.ipynb  longmemeval_o_experiment.py  longmemeval_s_cleaned.ipynb  longmemeval_s_experiment.py  main.py  mainRAG.py  mainRAGSAE.py  mainSAE.py  move.py  notes.txt  plot.py  plotResults.ipynb  pyproject.toml  scratch.ipynb  test.ipynb  test.py  testLLMs.py  testSAEOracle.ipynb  testSAESearcher.ipynb  testSimilarity.ipynb  testSimilarity.py  test_azure_auth.py  utils.py
config/: config.py
notebooks/: longmemeval_comparison.ipynb
scripts/: download_dataset.py
src/agents/: DataAugmentationAgent.py  MemoryAgent.py  RAGAgent.py  RAGSAEAgent.py  SAEAgent.py
src/agents/full_context/: FullContextAgent.py
src/agents/judge/: JudgeAgent.py
src/agents/rag/: RAGAgent.py
src/core/: Config.py  LongMemEvalDataset.py
src/datasets/: LongMemEvalDataset.py
src/experiments/pass_whole_context/: longmemeval_experiment.py  longmemeval_o_experiment.py
src/models/: LiteLLMModel.py  Model.py  QwenModel.py  TransformersModel.py
