[project]
name = "longmemeval-investigation"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "litellm",
    "pandas",
    "datasets",
    "huggingface-hub",
    "pydantic",
]

[project.optional-dependencies]
dev = ["ipykernel"]

torch = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "bitsandbytes",
]
