[project]
name = "longmemeval-investigathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "litellm",
    "pandas",
    "datasets",
    "huggingface-hub",
    "pydantic",
    "gdown",
    "ipykernel",
    "black",
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "transformer-lens>=2.16.1",
    "seaborn>=0.13.2",
]
